[package]
name = "flavours"
description = "An easy to use base16 scheme manager/builder that integrates with any workflow."
version = "0.1.0"
authors = ["Gabriel Fontes (Misterio77) <eu@misterio.me>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["base16", "color", "color-scheme", "manager", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.0.0-beta.1" , features = ["wrap_help", "suggestions", "color"]}
clap_generate = "3.0.0-beta.1"
glob = "0.3.0"
rand = "0.7.3"
toml = "0.5"
dirs = "2.0"
anyhow = "1.0.31"
