[package]
name = "flavours"
description = "An easy to use base16 scheme manager/builder that integrates with any workflow."
version = "0.1.0"
authors = ["Gabriel Fontes (Misterio77) <eu@misterio.me>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["base16", "color", "color-scheme", "manager", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help", "suggestions", "color"] }
clap_generate = { git = "https://github.com/clap-rs/clap" }
anyhow = "1.0"
glob = "0.3"
rand = "0.7"
dirs = "3.0"
hex = "0.4"
serde = {version ="1.0", features = ["derive"]}
serde_yaml = "0.8"
toml = "0.5"
shellexpand = "2.0"
shell-words = "1.0"
