[package]
name = "flavours"
description = "An easy to use base16 scheme manager/builder that integrates with any workflow."
version = "0.7.1"
authors = ["Gabriel Fontes (Misterio77) <eu@misterio.me>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["base16", "color", "color-scheme", "manager", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/Misterio77/flavours"
rust-version = "1.62.1"

[dependencies]
base16_color_scheme = "0.3.0"
anyhow = "1.0"
calm_io = "0.1"
clap = { version = "=3.0.0-beta.4", features = ["wrap_help", "suggestions", "color"] }
clap_generate = { version = "=3.0.0-beta.4" }
clap_derive = { version = "=3.0.0-beta.4" }
color-thief = "0.2"
image = "0.23"
dirs = "3.0"
glob = "0.3"
hex = "0.4"
palette = "0.5"
rand = "0.7"
serde = {version ="1.0", features = ["derive"]}
serde_yaml = "0.8"
shell-words = "1.0"
shellexpand = "2.0"
toml = "0.5"
